Practica Final Lopez Posadas/WindowsFormsApp1/SIC_gramaticaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SIC_gramatica.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class SIC_gramaticaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, NUMERO=12, VALOR=13, MNEMONICO=14, MNEMONICO1=15, MNEMONICO2V2=16, 
		MNEMONICO2V1=17, RSUB=18, BASE=19, DIRECTIVA_NUM=20, DIRECTIVA_VAL=21, 
		DIRECTIVA_END=22, DIRECTIVA_START=23, SIMBOLO=24, WS=25, NL=26;
	public const int
		RULE_prog = 0, RULE_inicio = 1, RULE_fin = 2, RULE_linea = 3, RULE_instruccion = 4, 
		RULE_instruccion2 = 5, RULE_instruccion3 = 6, RULE_instruccion4 = 7, RULE_directiva = 8;
	public static readonly string[] ruleNames = {
		"prog", "inicio", "fin", "linea", "instruccion", "instruccion2", "instruccion3", 
		"instruccion4", "directiva"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'@'", "'#'", "','", "'X'", "'A'", "'L'", "'B'", "'S'", "'T'", 
		"'F'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NUMERO", "VALOR", "MNEMONICO", "MNEMONICO1", "MNEMONICO2V2", "MNEMONICO2V1", 
		"RSUB", "BASE", "DIRECTIVA_NUM", "DIRECTIVA_VAL", "DIRECTIVA_END", "DIRECTIVA_START", 
		"SIMBOLO", "WS", "NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SIC_gramatica.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SIC_gramaticaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SIC_gramaticaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SIC_gramaticaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgContext : ParserRuleContext {
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public FinContext fin() {
			return GetRuleContext<FinContext>(0);
		}
		public LineaContext[] linea() {
			return GetRuleContexts<LineaContext>();
		}
		public LineaContext linea(int i) {
			return GetRuleContext<LineaContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 18; inicio();
			State = 22;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << MNEMONICO) | (1L << MNEMONICO1) | (1L << MNEMONICO2V2) | (1L << MNEMONICO2V1) | (1L << RSUB) | (1L << BASE) | (1L << DIRECTIVA_NUM) | (1L << DIRECTIVA_VAL) | (1L << SIMBOLO) | (1L << NL))) != 0)) {
				{
				{
				State = 19; linea();
				}
				}
				State = 24;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 25; fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public ITerminalNode SIMBOLO() { return GetToken(SIC_gramaticaParser.SIMBOLO, 0); }
		public ITerminalNode DIRECTIVA_START() { return GetToken(SIC_gramaticaParser.DIRECTIVA_START, 0); }
		public ITerminalNode NUMERO() { return GetToken(SIC_gramaticaParser.NUMERO, 0); }
		public ITerminalNode[] NL() { return GetTokens(SIC_gramaticaParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(SIC_gramaticaParser.NL, i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(Context, State);
		EnterRule(_localctx, 2, RULE_inicio);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 27; Match(SIMBOLO);
			State = 28; Match(DIRECTIVA_START);
			State = 29; Match(NUMERO);
			State = 31;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 30; Match(NL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 33;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinContext : ParserRuleContext {
		public ITerminalNode DIRECTIVA_END() { return GetToken(SIC_gramaticaParser.DIRECTIVA_END, 0); }
		public ITerminalNode Eof() { return GetToken(SIC_gramaticaParser.Eof, 0); }
		public ITerminalNode SIMBOLO() { return GetToken(SIC_gramaticaParser.SIMBOLO, 0); }
		public ITerminalNode[] NL() { return GetTokens(SIC_gramaticaParser.NL); }
		public ITerminalNode NL(int i) {
			return GetToken(SIC_gramaticaParser.NL, i);
		}
		public FinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fin; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterFin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitFin(this);
		}
	}

	[RuleVersion(0)]
	public FinContext fin() {
		FinContext _localctx = new FinContext(Context, State);
		EnterRule(_localctx, 4, RULE_fin);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35; Match(DIRECTIVA_END);
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SIMBOLO) {
				{
				State = 36; Match(SIMBOLO);
				}
			}

			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 39; Match(NL);
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 45; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineaContext : ParserRuleContext {
		public InstruccionContext instruccion() {
			return GetRuleContext<InstruccionContext>(0);
		}
		public ITerminalNode NL() { return GetToken(SIC_gramaticaParser.NL, 0); }
		public ITerminalNode NUMERO() { return GetToken(SIC_gramaticaParser.NUMERO, 0); }
		public ITerminalNode[] SIMBOLO() { return GetTokens(SIC_gramaticaParser.SIMBOLO); }
		public ITerminalNode SIMBOLO(int i) {
			return GetToken(SIC_gramaticaParser.SIMBOLO, i);
		}
		public Instruccion2Context instruccion2() {
			return GetRuleContext<Instruccion2Context>(0);
		}
		public Instruccion3Context instruccion3() {
			return GetRuleContext<Instruccion3Context>(0);
		}
		public Instruccion4Context instruccion4() {
			return GetRuleContext<Instruccion4Context>(0);
		}
		public LineaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linea; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterLinea(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitLinea(this);
		}
	}

	[RuleVersion(0)]
	public LineaContext linea() {
		LineaContext _localctx = new LineaContext(Context, State);
		EnterRule(_localctx, 6, RULE_linea);
		int _la;
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
				case 1:
					{
					State = 48;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SIMBOLO) {
						{
						State = 47; Match(SIMBOLO);
						}
					}

					}
					break;
				case 2:
					{
					{
					State = 51;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 50; Match(SIMBOLO);
						}
						}
						State = 53;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==SIMBOLO );
					State = 55; Match(NUMERO);
					}
					}
					break;
				}
				State = 58; instruccion();
				State = 59; Match(NL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 62;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SIMBOLO) {
						{
						State = 61; Match(SIMBOLO);
						}
					}

					}
					break;
				case 2:
					{
					{
					State = 65;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 64; Match(SIMBOLO);
						}
						}
						State = 67;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==SIMBOLO );
					State = 69; Match(NUMERO);
					}
					}
					break;
				}
				State = 72; instruccion2();
				State = 73; Match(NL);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 84;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
				case 1:
					{
					State = 76;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SIMBOLO) {
						{
						State = 75; Match(SIMBOLO);
						}
					}

					}
					break;
				case 2:
					{
					{
					State = 79;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 78; Match(SIMBOLO);
						}
						}
						State = 81;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==SIMBOLO );
					State = 83; Match(NUMERO);
					}
					}
					break;
				}
				State = 86; instruccion3();
				State = 87; Match(NL);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 98;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
				case 1:
					{
					State = 90;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SIMBOLO) {
						{
						State = 89; Match(SIMBOLO);
						}
					}

					}
					break;
				case 2:
					{
					{
					State = 93;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 92; Match(SIMBOLO);
						}
						}
						State = 95;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==SIMBOLO );
					State = 97; Match(NUMERO);
					}
					}
					break;
				}
				State = 100; instruccion4();
				State = 101; Match(NL);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 103; Match(NL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		public ITerminalNode MNEMONICO() { return GetToken(SIC_gramaticaParser.MNEMONICO, 0); }
		public ITerminalNode NUMERO() { return GetToken(SIC_gramaticaParser.NUMERO, 0); }
		public ITerminalNode[] SIMBOLO() { return GetTokens(SIC_gramaticaParser.SIMBOLO); }
		public ITerminalNode SIMBOLO(int i) {
			return GetToken(SIC_gramaticaParser.SIMBOLO, i);
		}
		public ITerminalNode RSUB() { return GetToken(SIC_gramaticaParser.RSUB, 0); }
		public ITerminalNode BASE() { return GetToken(SIC_gramaticaParser.BASE, 0); }
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitInstruccion(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(Context, State);
		EnterRule(_localctx, 8, RULE_instruccion);
		int _la;
		try {
			State = 147;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case MNEMONICO:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 106; Match(T__0);
					}
				}

				State = 109; Match(MNEMONICO);
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__1 || _la==T__2) {
					{
					State = 111;
					_la = TokenStream.LA(1);
					if ( !(_la==T__1 || _la==T__2) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 126;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,22,Context) ) {
				case 1:
					{
					State = 115;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SIMBOLO) {
						{
						State = 114; Match(SIMBOLO);
						}
					}

					}
					break;
				case 2:
					{
					State = 118;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==NUMERO) {
						{
						State = 117; Match(NUMERO);
						}
					}

					}
					break;
				case 3:
					{
					{
					State = 121;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 120; Match(SIMBOLO);
						}
						}
						State = 123;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==SIMBOLO );
					State = 125; Match(NUMERO);
					}
					}
					break;
				}
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__3) {
					{
					State = 129;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 128; Match(T__3);
						}
						}
						State = 131;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==T__3 );
					State = 133; Match(T__4);
					}
				}

				}
				break;
			case RSUB:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136; Match(RSUB);
				}
				break;
			case BASE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 137; Match(BASE);
				{
				State = 139;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 138; Match(SIMBOLO);
					}
					}
					State = 141;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==SIMBOLO );
				State = 144;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NUMERO) {
					{
					State = 143; Match(NUMERO);
					}
				}

				}
				}
				break;
			case DIRECTIVA_NUM:
			case DIRECTIVA_VAL:
				EnterOuterAlt(_localctx, 4);
				{
				State = 146; directiva();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Instruccion2Context : ParserRuleContext {
		public ITerminalNode MNEMONICO2V2() { return GetToken(SIC_gramaticaParser.MNEMONICO2V2, 0); }
		public ITerminalNode NUMERO() { return GetToken(SIC_gramaticaParser.NUMERO, 0); }
		public Instruccion2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion2; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterInstruccion2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitInstruccion2(this);
		}
	}

	[RuleVersion(0)]
	public Instruccion2Context instruccion2() {
		Instruccion2Context _localctx = new Instruccion2Context(Context, State);
		EnterRule(_localctx, 10, RULE_instruccion2);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(MNEMONICO2V2);
			{
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 150;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0) );
			State = 156;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 155; Match(T__3);
				}
				}
				State = 158;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__3 );
			State = 162;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				{
				State = 160;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case NUMERO:
				{
				State = 161; Match(NUMERO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Instruccion3Context : ParserRuleContext {
		public ITerminalNode MNEMONICO2V1() { return GetToken(SIC_gramaticaParser.MNEMONICO2V1, 0); }
		public Instruccion3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion3; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterInstruccion3(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitInstruccion3(this);
		}
	}

	[RuleVersion(0)]
	public Instruccion3Context instruccion3() {
		Instruccion3Context _localctx = new Instruccion3Context(Context, State);
		EnterRule(_localctx, 12, RULE_instruccion3);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164; Match(MNEMONICO2V1);
			State = 165;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Instruccion4Context : ParserRuleContext {
		public ITerminalNode MNEMONICO1() { return GetToken(SIC_gramaticaParser.MNEMONICO1, 0); }
		public Instruccion4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion4; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterInstruccion4(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitInstruccion4(this);
		}
	}

	[RuleVersion(0)]
	public Instruccion4Context instruccion4() {
		Instruccion4Context _localctx = new Instruccion4Context(Context, State);
		EnterRule(_localctx, 14, RULE_instruccion4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; Match(MNEMONICO1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectivaContext : ParserRuleContext {
		public ITerminalNode DIRECTIVA_NUM() { return GetToken(SIC_gramaticaParser.DIRECTIVA_NUM, 0); }
		public ITerminalNode NUMERO() { return GetToken(SIC_gramaticaParser.NUMERO, 0); }
		public ITerminalNode DIRECTIVA_VAL() { return GetToken(SIC_gramaticaParser.DIRECTIVA_VAL, 0); }
		public ITerminalNode VALOR() { return GetToken(SIC_gramaticaParser.VALOR, 0); }
		public DirectivaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directiva; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.EnterDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISIC_gramaticaListener typedListener = listener as ISIC_gramaticaListener;
			if (typedListener != null) typedListener.ExitDirectiva(this);
		}
	}

	[RuleVersion(0)]
	public DirectivaContext directiva() {
		DirectivaContext _localctx = new DirectivaContext(Context, State);
		EnterRule(_localctx, 16, RULE_directiva);
		int _la;
		try {
			State = 173;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DIRECTIVA_NUM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 169; Match(DIRECTIVA_NUM);
				State = 170; Match(NUMERO);
				}
				break;
			case DIRECTIVA_VAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 171; Match(DIRECTIVA_VAL);
				State = 172;
				_la = TokenStream.LA(1);
				if ( !(_la==NUMERO || _la==VALOR) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
